--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="movie_poster_url">https://image.tmdb.org/t/p/w500%s</string>
+    <string name="search_title">Search</string>
+    <string name="favorites_title">Favorites</string>
+
 </resources>
